--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "djorient_vue",
+  "name": "vue_demo",
   "version": "1.0.0",
-  "description": "djorient",
-  "author": "Gavin<543541941@qq.com>",
+  "description": "vue",
+  "author": "Gavin<gavin.tech@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
